--- a/style.css
+++ b/style.css
@@ -13,13 +13,15 @@ body {
 
 navbar{
     display: flex;
-    background: #7bd389;
+    background: #5386E4;
     padding: 20px 50px;
     justify-content: space-between;
     font-size: 20px;
     width: 100%;
     box-sizing: border-box;
     top: 0;
+    flex-wrap:wrap;
+    
 }
 
 .navspan a {
@@ -27,6 +29,26 @@ navbar{
     color: white;
 }
 
-#search {
+#search_bar {
     text-align: center;
+    border-radius: 5px;
+    border: 2px solid #5386E4;
+    font-size: 14px;
 }
+span{
+    background-color:rgba(0,0,0,0.4);
+    border-radius: 10px;
+    padding: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    box-shadow: 2px 2px 5px;
+    font-family: 'Nunito Sans', sans-serif;
+}
+.navElement{
+    display:flex;
+
+}
+
+
+
+
